# MasterQA

./: .travis.yml  CNAME  MANIFEST.in  README.md  azure-pipelines.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  style_sheet.py
.github/workflows/: python-package.yml  spot_checks.yml
examples/: basic_masterqa_test.py  masterqa_test.py  setup.cfg  verify_test.py
examples/deploy_only/: README.md  results_page.py
examples/unit_tests/: verify_framework.py
masterqa/: __init__.py  master_qa.py  master_settings.py  settings.py  style_sheet.py
