[build-system]
requires = ["setuptools>=70.2.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "masterqa"
readme = "README.md"
dynamic = [
    "version",
    "license",
    "authors",
    "scripts",
    "description",
    "maintainers",
    "entry-points",
    "dependencies",
    "requires-python",
]

[project.urls]
"Homepage" = "https://github.com/masterqa/MasterQA"
"Download" = "https://pypi.org/project/masterqa/#files"
"PyPI" = "https://pypi.org/project/masterqa/"
"Source" = "https://github.com/masterqa/MasterQA"
"Repository" = "https://github.com/masterqa/MasterQA"

[tool.setuptools]
packages = [
    "masterqa",
]

[tool.pytest.ini_options]
addopts = ["--capture=tee-sys", "-p no:cacheprovider"]
norecursedirs = [".*", "build", "dist", "recordings", "temp", "assets"]
filterwarnings = [
    "ignore::pytest.PytestWarning",
    "ignore:.*U.*mode is deprecated:DeprecationWarning",
]
junit_family = ["legacy"]
python_files = ["test_*.py", "*_test.py", "*_tests.py", "*_suite.py"]
python_classes = ["Test*", "*Test*", "*Test", "*Tests", "*Suite"]
python_functions = ["test_*"]
markers = [
    "marker1", "marker2", "marker3", "marker_test_suite",
    "local", "remote", "offline", "expected_failure",
    "qa", "ci", "e2e", "smoke", "ready", "master", "deploy",
    "develop", "staging", "production", "release", "active",
]
